Closed
Bug 2055018
Opened 17 days ago
Closed 15 days ago
Perma [tier 2] /builds/worker/checkouts/gecko/dom/navigation/UserNavigationInvolvement.h:13:3: error: expected identifier
Categories
(Core :: DOM: Navigation, defect, P5)
Core
DOM: Navigation
Tracking
()
RESOLVED
FIXED
154 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr140 | --- | unaffected |
| firefox-esr153 | --- | unaffected |
| firefox153 | --- | unaffected |
| firefox154 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: emilio)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: sstanca [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=578674624&repo=autoland&task=eSiuFZ8xS-ia92FfDE66pw.1
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/eSiuFZ8xS-ia92FfDE66pw/runs/1/artifacts/public/logs/live_backing.log
[task 2026-07-14T17:08:10.748+00:00] 17:08:10 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/js/src/jsapi-tests'
[task 2026-07-14T17:08:10.749+00:00] 17:08:10 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2026-07-14T17:08:10.749+00:00] 17:08:10 INFO - media/ffvpx/libavcodec/libopusenc.o
[task 2026-07-14T17:08:10.749+00:00] 17:08:10 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2026-07-14T17:08:10.874+00:00] 17:08:10 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/security/nss/lib/softoken/softoken_softokn'
[task 2026-07-14T17:08:10.879+00:00] 17:08:10 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o sdb.o -c -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -fstrict-flex-arrays=1 -DNDEBUG -DTRIMMED=1 '-DSHLIB_SUFFIX="so"' '-DSHLIB_PREFIX="lib"' '-DSOFTOKEN_LIB_NAME="libsoftokn3.so"' '-DSHLIB_VERSION="3"' -DNSS_FIPS_DISABLED -DNSS_NO_INIT_SUPPORT -DNSS_X86_OR_X64 -DNSS_X64 -DNSS_USE_64 -DUSE_UTIL_DIRECTLY -DNO_NSPR_10_SUPPORT -DSSL_DISABLE_DEPRECATED_CIPHER_SUITE_NAMES -DLINUX2_1 -DLINUX -Dlinux -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_SOURCE -DSDB_MEASURE_USE_TEMP_DIR -DHAVE_STRERROR -DXP_UNIX -D_REENTRANT -DNSS_DISABLE_DBM -DNSS_DISABLE_LIBPKIX -DNSS_USE_PKCS5_PBKD2_PARAMS2_ONLY -DSOFTOKEN_USE_PKCS5_PBKD2_PARAMS2_ONLY -I/builds/worker/checkouts/gecko/security/nss/lib/softoken -I/builds/worker/workspace/obj-build/security/nss/lib/softoken/softoken_softokn -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/private/nss -I/builds/worker/workspace/obj-build/dist/include/nss -I/builds/worker/workspace/obj-build/dist/include -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -pthread -ffunction-sections -fdata-sections -fno-math-errno -fdiagnostics-absolute-paths -fPIC -fcrash-diagnostics-dir=/builds/worker/artifacts -gdwarf-4 -gsimple-template-names --start-no-unused-arguments -mllvm=-dwarf-linkage-names=Abstract --end-no-unused-arguments -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Winvalid-utf8 -Wstring-conversion -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Werror=implicit-function-declaration -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -Wno-character-conversion -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/sdb.o.pp /builds/worker/checkouts/gecko/security/nss/lib/softoken/sdb.c
[task 2026-07-14T17:08:10.882+00:00] 17:08:10 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/security/nss/lib/softoken/softoken_softokn'
[task 2026-07-14T17:08:10.882+00:00] 17:08:10 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/widget/gtk'
[task 2026-07-14T17:08:10.887+00:00] 17:08:10 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++20 -o Unified_cpp_widget_gtk3.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -fstrict-flex-arrays=1 -DNDEBUG=1 -DTRIMMED=1 -DCAIRO_GFX '-DMOZ_APP_NAME="firefox"' -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DMOZ_SUPPORT_LEAKCHECKING -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/widget/gtk -I/builds/worker/workspace/obj-build/widget/gtk -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/third_party/abseil-cpp -I/builds/worker/checkouts/gecko/toolkit/components/telemetry -I/builds/worker/checkouts/gecko/xpcom/base -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/forms -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/other-licenses/atk-1.0 -I/builds/worker/checkouts/gecko/third_party/cups/include -I/builds/worker/checkouts/gecko/widget -I/builds/worker/checkouts/gecko/widget/headless -I/builds/worker/checkouts/gecko/widget/x11 -I/builds/worker/checkouts/gecko/third_party/gbm/gbm -I/builds/worker/checkouts/gecko/third_party/drm/drm -I/builds/worker/checkouts/gecko/third_party/drm/drm/include -I/builds/worker/checkouts/gecko/third_party/drm/drm/include/libdrm -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-rtti -pthread -fno-sized-deallocation -fno-aligned-new -ffunction-sections -fdata-sections -fno-math-errno -fno-exceptions -fdiagnostics-absolute-paths -fPIC -fcrash-diagnostics-dir=/builds/worker/artifacts -gdwarf-4 -gsimple-template-names --start-no-unused-arguments -mllvm=-dwarf-linkage-names=Abstract --end-no-unused-arguments -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wdeprecated-literal-operator -Winvalid-utf8 -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-vla-cxx-extension -Wno-unknown-warning-option -Wno-character-conversion -Werror=switch -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/unix-print -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -pthread -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_widget_gtk3.o.pp Unified_cpp_widget_gtk3.cpp
[task 2026-07-14T17:08:10.887+00:00] 17:08:10 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/widget/gtk'
[task 2026-07-14T17:08:10.888+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/gtk/nsWidgetFactory.cpp:7:
[task 2026-07-14T17:08:10.888+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/headless/HeadlessClipboard.h:10:
[task 2026-07-14T17:08:10.888+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/nsBaseClipboard.h:12:
[task 2026-07-14T17:08:10.888+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/toolkit/components/telemetry/core/ipc/TelemetryComms.h:10:
[task 2026-07-14T17:08:10.889+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/ipc/glue/IPCMessageUtilsSpecializations.h:25:
[task 2026-07-14T17:08:10.889+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/UserActivation.h:12:
[task 2026-07-14T17:08:10.889+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/nsPIDOMWindow.h:17:
[task 2026-07-14T17:08:10.889+00:00] 17:08:10 ERROR - /builds/worker/checkouts/gecko/dom/navigation/UserNavigationInvolvement.h:13:3: error: expected identifier
[task 2026-07-14T17:08:10.889+00:00] 17:08:10 INFO - 13 | None = 0,
[task 2026-07-14T17:08:10.889+00:00] 17:08:10 INFO - | ^
[task 2026-07-14T17:08:10.890+00:00] 17:08:10 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/X11/X.h:115:30: note: expanded from macro 'None'
[task 2026-07-14T17:08:10.890+00:00] 17:08:10 INFO - 115 | #define None 0L /* universal null resource or null atom */
[task 2026-07-14T17:08:10.890+00:00] 17:08:10 INFO - | ^
[task 2026-07-14T17:08:10.890+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/gtk/nsWidgetFactory.cpp:7:
[task 2026-07-14T17:08:10.890+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/headless/HeadlessClipboard.h:10:
[task 2026-07-14T17:08:10.890+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/nsBaseClipboard.h:12:
[task 2026-07-14T17:08:10.891+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/toolkit/components/telemetry/core/ipc/TelemetryComms.h:10:
[task 2026-07-14T17:08:10.891+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/ipc/glue/IPCMessageUtilsSpecializations.h:25:
[task 2026-07-14T17:08:10.891+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/UserActivation.h:12:
[task 2026-07-14T17:08:10.891+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/nsPIDOMWindow.h:17:
[task 2026-07-14T17:08:10.891+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/caps/OriginAttributes.h:10:
[task 2026-07-14T17:08:10.892+00:00] 17:08:10 ERROR - /builds/worker/checkouts/gecko/dom/bindings/BindingDeclarations.h:516:3: error: expected identifier
[task 2026-07-14T17:08:10.892+00:00] 17:08:10 INFO - 516 | Always,
[task 2026-07-14T17:08:10.892+00:00] 17:08:10 INFO - | ^
[task 2026-07-14T17:08:10.892+00:00] 17:08:10 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/X11/X.h:441:33: note: expanded from macro 'Always'
[task 2026-07-14T17:08:10.892+00:00] 17:08:10 INFO - 441 | #define Always 2
[task 2026-07-14T17:08:10.892+00:00] 17:08:10 INFO - | ^
[task 2026-07-14T17:08:10.892+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/gtk/nsWidgetFactory.cpp:7:
[task 2026-07-14T17:08:10.892+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/headless/HeadlessClipboard.h:10:
[task 2026-07-14T17:08:10.893+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/nsBaseClipboard.h:12:
[task 2026-07-14T17:08:10.893+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/toolkit/components/telemetry/core/ipc/TelemetryComms.h:10:
[task 2026-07-14T17:08:10.893+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/ipc/glue/IPCMessageUtilsSpecializations.h:25:
[task 2026-07-14T17:08:10.893+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/UserActivation.h:12:
[task 2026-07-14T17:08:10.893+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/nsPIDOMWindow.h:17:
[task 2026-07-14T17:08:10.893+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/nsPIDOMWindow.h:17:
[task 2026-07-14T17:08:10.893+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/toolkit/components/resistfingerprinting/nsRFPService.h:15:
[task 2026-07-14T17:08:10.894+00:00] 17:08:10 ERROR - /builds/worker/workspace/obj-build/dist/include/mozilla/dom/MediaDeviceInfoBinding.h:84:65: error: no member named 'Always' in 'mozilla::dom::DefineInterfaceProperty'
[task 2026-07-14T17:08:10.894+00:00] 17:08:10 INFO - 84 | DefineInterfaceProperty::Always);
[task 2026-07-14T17:08:10.894+00:00] 17:08:10 INFO - | ^~~~~~
[task 2026-07-14T17:08:10.894+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/gtk/nsWidgetFactory.cpp:7:
[task 2026-07-14T17:08:10.894+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/headless/HeadlessClipboard.h:10:
[task 2026-07-14T17:08:10.894+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/nsBaseClipboard.h:12:
[task 2026-07-14T17:08:10.895+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/toolkit/components/telemetry/core/ipc/TelemetryComms.h:10:
[task 2026-07-14T17:08:10.895+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/ipc/glue/IPCMessageUtilsSpecializations.h:25:
[task 2026-07-14T17:08:10.895+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/UserActivation.h:12:
[task 2026-07-14T17:08:10.895+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/nsPIDOMWindow.h:17:
[task 2026-07-14T17:08:10.895+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/toolkit/components/resistfingerprinting/nsRFPService.h:16:
[task 2026-07-14T17:08:10.895+00:00] 17:08:10 ERROR - /builds/worker/workspace/obj-build/dist/include/mozilla/dom/ScreenOrientationBinding.h:110:65: error: no member named 'Always' in 'mozilla::dom::DefineInterfaceProperty'
[task 2026-07-14T17:08:10.896+00:00] 17:08:10 INFO - 110 | DefineInterfaceProperty::Always);
[task 2026-07-14T17:08:10.896+00:00] 17:08:10 INFO - | ^~~~~~
[task 2026-07-14T17:08:10.896+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/gtk/nsWidgetFactory.cpp:7:
[task 2026-07-14T17:08:10.896+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/headless/HeadlessClipboard.h:10:
[task 2026-07-14T17:08:10.896+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/nsBaseClipboard.h:12:
[task 2026-07-14T17:08:10.896+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/docshell/base/BrowsingContext.h:18:
[task 2026-07-14T17:08:10.896+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/LocationBase.h:8:
[task 2026-07-14T17:08:10.897+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/promise/Promise.h:24:
[task 2026-07-14T17:08:10.897+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/bindings/ToJSValue.h:22:
[task 2026-07-14T17:08:10.897+00:00] 17:08:10 ERROR - /builds/worker/checkouts/gecko/dom/bindings/BindingUtils.h:3431:21: error: no member named 'Always' in 'mozilla::dom::DefineInterfaceProperty'; did you mean 'nsGkAtoms::always'?
[task 2026-07-14T17:08:10.897+00:00] 17:08:10 INFO - 3431 | return aDefine == DefineInterfaceProperty::Always ||
[task 2026-07-14T17:08:10.897+00:00] 17:08:10 INFO - | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2026-07-14T17:08:10.897+00:00] 17:08:10 INFO - | nsGkAtoms::always
[task 2026-07-14T17:08:10.898+00:00] 17:08:10 INFO - /builds/worker/workspace/obj-build/xpcom/ds/nsGkAtomList.h:89:9: note: 'nsGkAtoms::always' declared here
[task 2026-07-14T17:08:10.898+00:00] 17:08:10 INFO - 89 | GK_ATOM(always, "always")
[task 2026-07-14T17:08:10.898+00:00] 17:08:10 INFO - | ^
[task 2026-07-14T17:08:10.898+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/gtk/nsWidgetFactory.cpp:7:
[task 2026-07-14T17:08:10.898+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/headless/HeadlessClipboard.h:10:
[task 2026-07-14T17:08:10.898+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/widget/nsBaseClipboard.h:12:
[task 2026-07-14T17:08:10.898+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/docshell/base/BrowsingContext.h:18:
[task 2026-07-14T17:08:10.898+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/base/LocationBase.h:8:
[task 2026-07-14T17:08:10.899+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/promise/Promise.h:24:
[task 2026-07-14T17:08:10.899+00:00] 17:08:10 INFO - In file included from /builds/worker/checkouts/gecko/dom/bindings/ToJSValue.h:22:
[task 2026-07-14T17:08:10.899+00:00] 17:08:10 ERROR - /builds/worker/checkouts/gecko/dom/bindings/BindingUtils.h:3431:18: error: invalid operands to binary expression ('DefineInterfaceProperty' and 'nsStaticAtom *const')
[task 2026-07-14T17:08:10.899+00:00] 17:08:10 INFO - 3431 | return aDefine == DefineInterfaceProperty::Always ||
[task 2026-07-14T17:08:10.899+00:00] 17:08:10 INFO - | ~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2026-07-14T17:08:10.900+00:00] 17:08:10 INFO - /builds/worker/checkouts/gecko/mfbt/TypedEnumBits.h:78:1: note: candidate template ignored: could not match 'const CastableTypedEnumResult<E>' against 'nsStaticAtom *const'
[task 2026-07-14T17:08:10.900+00:00] 17:08:10 INFO - 78 | MOZ_CASTABLETYPEDENUMRESULT_BINOP(==, E, bool)
[task 2026-07-14T17:08:10.900+00:00] 17:08:10 INFO - | ^
Comment 1•17 days ago
|
||
:emilio, since you are the author of the regressor, bug 2054311, could you take a look?
For more information, please visit BugBot documentation.
Flags: needinfo?(emilio)
| Assignee | ||
Updated•16 days ago
|
Assignee: nobody → emilio
Flags: needinfo?(emilio)
| Assignee | ||
Comment 2•16 days ago
|
||
And clean up some unused ones while at it.
| Comment hidden (Intermittent Failures Robot) |
Pushed by ealvarez@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/2ed443afd0f0
https://hg.mozilla.org/integration/autoland/rev/0269cc08bec1
Add some missing X11UndefineNone includes. r=stransky
Comment 5•15 days ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 15 days ago
status-firefox154:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 154 Branch
| Comment hidden (Intermittent Failures Robot) |
Updated•4 days ago
|
status-firefox153:
--- → unaffected
status-firefox-esr140:
--- → unaffected
status-firefox-esr153:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•