Bug 2055018 - Add some missing X11UndefineNone includes. r=stransky

And clean up some unused ones while at it.

Differential Revision: https://phabricator.services.mozilla.com/D312311