widget/gtk/WidgetUtilsGtk.cpp
@@ -8,9 +8,14 @@
 #include <glib.h>
 #include <gtk/gtk.h>
 #include <inttypes.h>
+#ifdef MOZ_X11
+#  include <X11/Xatom.h>
+#  include <X11/Xlib.h>
+
+#  include "X11UndefineNone.h"
+#endif
 
 #include "MainThreadUtils.h"
-#include "mozilla/Components.h"
 #include "mozilla/StaticPrefs_widget.h"
 #include "mozilla/UniquePtr.h"
 #include "nsCOMPtr.h"
@@ -18,7 +23,6 @@
 #include "nsGtkKeyUtils.h"
 #include "nsGtkUtils.h"
 #include "nsIFile.h"
-#include "nsIGfxInfo.h"
 #include "nsIProperties.h"
 #include "nsReadableUtils.h"
 #include "nsString.h"
@@ -36,11 +40,6 @@
 #ifdef MOZ_WAYLAND
 #  include "nsWaylandDisplay.h"
 #endif  // MOZ_WAYLAND
-
-#ifdef MOZ_X11
-#  include <X11/Xatom.h>
-#  include <X11/Xlib.h>
-#endif /* MOZ_X11 */
 
 #undef LOGW
 #ifdef MOZ_LOGGING
